--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "shortid": "^2.2.16",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
